# roll20-map-boundary-detection

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd.yml
experiments/okeefe/: image_detection_tests.ipynb  image_to_masks_to_line_segments.ipynb  mask_to_polygons_tests.ipynb
